--- a/cheese.html
+++ b/cheese.html
@@ -6,14 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Parking Pals</title>
 
-
+  <!-- No <base> tag -->
   <link rel="stylesheet" href="./homepage.css" />
   <script defer src="./homepage.js"></script>
 </head>
 <body>
   <main id="main-holder">
     <h1 id="Homepage-header">Parking Pals</h1>
-    
+
     <form id="login-box">
       <input type="submit" value="Login" id="login-box-submit" />
     </form>
@@ -22,10 +22,7 @@
       <input type="submit" value="Sign Up" id="signup-box-submit" />
     </form>
 
-    <img src="./eagle.png" alt="Eagle" id="eagle-image" />
-
-  
+    <img src="./images/eagle.png" alt="Eagle" id="eagle-image" />
   </main>
 </body>
-
 </html>
