CHanging pathing to be better suited for using github sites

--- a/signup/signup.html
+++ b/signup/signup.html
@@ -4,11 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <base href="../">
   <title>Signup</title>
   
-  <link rel="stylesheet" href="signup/signup.css">
-  <script defer src="signup/signup.js"></script>
+  <link rel="stylesheet" href="./signup.css">
+  <script defer src="./signup.js"></script>
 </head>
 
 <body>
