--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <title>Parking Pals</title>
 
 
-  <link rel="stylesheet" href="./homepage.css" />
-  <script defer src="./homepage.js"></script>
+  <link rel="stylesheet" href="./homepage/homepage.css" />
+  <script defer src="./homepage/homepage.js"></script>
 </head>
 <body>
   <main id="main-holder">
@@ -22,7 +22,7 @@
       <input type="submit" value="Sign Up" id="signup-box-submit" />
     </form>
 
-    <img src="./eagle.png" alt="Eagle" id="eagle-image" />
+    <img src="./images/eagle.png" alt="Eagle" id="eagle-image" />
 
   
   </main>
