--- a/login/login.html
+++ b/login/login.html
@@ -4,11 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <base href="../">
   <title>Login</title>
   
-  <link rel="stylesheet" href="login/login.css">
-  <script defer src="login/login.js"></script>
+  <link rel="stylesheet" href="./login.css">
+  <script defer src="./login.js"></script>
 </head>
 
 <body>
