--- a/user/dashboard/dashboard.html
+++ b/user/dashboard/dashboard.html
@@ -5,9 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Logout</title>
-  <base href="../../">
-  <link rel="stylesheet" href="user/dashboard/dashboard.css">
-  <script defer src="user/dashboard/dashboard.js"></script>
+  <link rel="stylesheet" href="./dashboard.css">
+  <script defer src="./dashboard.js"></script>
 </head>
 
 <body>
