Making changes to update checkin

--- a/user/checking/checkin/checkin.html
+++ b/user/checking/checkin/checkin.html
@@ -4,11 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <base href="../../../">
   <title>Check in</title>
-  
-  <link rel="stylesheet" href="user/checking/checkin/checkin2.css">
-  <script defer src="user/checking/checkin/checkin.js"></script>
+  <link rel="stylesheet" href="./checkin.css">
+  <script defer src="./checkin.js"></script>
 </head>
 
 <body>
@@ -16,13 +14,13 @@
     <h1 id="checkin-header">Check In</h1>
     
     <form id="checkin-form">
+      <p>Lot name:</p>
       <input type="text" name="lot" id="checkin-form-lot" class="checkin-form-field" placeholder="Ex. Armstrong">
+      <p>Car ID:</p>
       <input type="text" name="carID" id="checkin-form-carID" class="checkin-form-field" placeholder="Ex. 1234">
+      <p></p>
       <input type="submit" value="Checkin" id="checkin-form-submit">
     </form>
-
-    <p id="bruce" class="thingy">Bruce.</p>
-    <p id="bruce2" class="thingy">Bruce2.</p>
   
   </main>
 </body>
