Making some updates to styling

--- a/admin/dashboard/dashboard.html
+++ b/admin/dashboard/dashboard.html
@@ -5,7 +5,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Logout</title>
-
   <link rel="stylesheet" href="./dashboard.css">
   <script defer src="./dashboard.js"></script>
 </head>
@@ -13,7 +12,18 @@
 <body>
   <main id="main-holder">
     <h1 id="Dashboard-header">Admin Dashboard</h1>
-    
+    <form id="edit-lots-box"> 
+      <input type="submit" value="Edit Lots" id="edit-lots-box-submit">
+    </form>
+
+    <form id="view-cars-box">
+      <input type="submit" value="View Cars" id="view-cars-box-submit">
+    </form>
+
+    <form id="announcement-box">
+      <input type="submit" vlaue="Announcement" id="announcement-box-submit">
+    </form>
+
     <form id="logout-box">
       <input type="submit" value="Logout" id="logout-box-submit">
     </form>
