--- a/user/checking/checkin/checkin.html
+++ b/user/checking/checkin/checkin.html
@@ -14,12 +14,11 @@
     <h1 id="checkin-header">Check In</h1>
     
     <form id="checkin-form">
-      <p>Lot name:</p>
+      <label for="checkin-form-lot">Parking lot</label>
       <input type="text" name="lot" id="checkin-form-lot" class="checkin-form-field" placeholder="Ex. Armstrong">
-      <p>Car ID:</p>
+      <label for="checkin-form-carID">Car PIN</label>
       <input type="text" name="carID" id="checkin-form-carID" class="checkin-form-field" placeholder="Ex. 1234">
-      <p></p>
-      <input type="submit" value="Checkin" id="checkin-form-submit">
+      <input type="submit" value="Check in" id="checkin-form-submit">
     </form>
   
   </main>
