Most recent stuff

--- a/user/dashboard/dashboard.html
+++ b/user/dashboard/dashboard.html
@@ -5,13 +5,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Logout</title>
-  <link rel="stylesheet" href="./dashboard.css">
+  <link rel="stylesheet" href="./dashboard2.css">
   <script defer src="./dashboard.js"></script>
 </head>
 
 <body>
   <main id="main-holder">
     <h1 id="Dashboard-header">Dashboard</h1>
+
+    <form id="view-parking-box">
+      <input type="submit" value="View Parking" id="view-parking-box-submit">
+    </form>
 
     <form id="checkin-box">
       <input type="submit" value="Check in" id="checkin-box-submit">
