--- a/signup/signup.html
+++ b/signup/signup.html
@@ -8,6 +8,7 @@
   
   <link rel="stylesheet" href="./signup.css">
   <script defer src="./signup.js"></script>
+  <script type="module" src="js/supabase-client.js"></script>
 </head>
 
 <body>
@@ -15,12 +16,30 @@
     <h1 id="signup-header">Sign Up</h1>
     
     <form id="signup-form">
+      <input type="text" name="name" id="name-field" class="signup-form-field" placeholder="Name">
       <input type="text" name="username" id="username-field" class="signup-form-field" placeholder="Username">
       <input type="password" name="password" id="password-field" class="signup-form-field" placeholder="Password">
       <input type="submit" value="Register" id="signup-form-submit">
     </form>
   
   </main>
+  <script type="module">
+    document.querySelector('#signup-form')?.addEventListener('submit', async (e) => {
+      e.preventDefault();
+      const name = document.querySelector('#name-field').value.trim();
+      const email = document.querySelector('#username-field').value.trim();
+      const password = document.querySelector('#password-field').value;
+
+      const { data, error } = await supabase.auth.signUp({
+        email, password,
+        options: { data: { display_name: name || '' } }
+      });
+      if (error) return alert(error.message);
+
+      alert('Check your email to confirm (if confirmations are on).');
+      location.href = 'login/login.html';
+    });
+  </script>
 </body>
 
 </html>
