Addding signup ability

--- a/signup/signup.html
+++ b/signup/signup.html
@@ -7,6 +7,16 @@
   <title>Signup</title>
   
   <link rel="stylesheet" href="./signup.css">
+  <script type="module">
+    import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/+esm';
+
+    // ⬇️ Replace with your real values from Supabase → Project Settings → API
+    const SUPABASE_URL = 'https://objauqyapbcgetfvnmbm.supabase.co';
+    const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im9iamF1cXlhcGJjZ2V0ZnZubWJtIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjIyMTAyOTYsImV4cCI6MjA3Nzc4NjI5Nn0.2I0lO98cq9kLBmyKkOr5maVNaUHKvGv3biYt-NF2JcY';
+
+    // Make the client available to other scripts
+    window.supabase = createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+  </script>
   <script defer src="./signup.js"></script>
 </head>
 
