--- a/signup/signup.html
+++ b/signup/signup.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Signup</title>
-  
+  <base href="/Parking_Pals/">
   <link rel="stylesheet" href="./signup.css">
   <script type="module">
     import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/+esm';
