--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Parking Pals</title>
   <base href="/Parking_Pals/">
-  <link rel="stylesheet" href="./homepage/homepage.css" />
-  <script defer src="./homepage/homepage.js"></script>
+  <link rel="stylesheet" href="homepage/homepage.css" />
+  <script defer src="homepage/homepage.js"></script>
 </head>
 <body>
   <main id="main-holder">
