--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Parking Pals</title>
-  <base href="/Parking_Pals/">
-  <link rel="stylesheet" href="homepage/homepage.css" />
-  <script defer src="homepage/homepage.js"></script>
+  
+  <link rel="stylesheet" href="/Parking_Pals/homepage/homepage.css" />
+  <script defer src="/Parking_Pals/homepage/homepage.js"></script>
 </head>
 <body>
   <main id="main-holder">
@@ -21,7 +21,7 @@
       <input type="submit" value="Sign Up" id="signup-box-submit" />
     </form>
 
-    <img src="./images/eagle.png" alt="Eagle" id="eagle-image" />
+    <img src="/Parking_Pals/images/eagle.png" alt="Eagle" id="eagle-image" />
 
   
   </main>
