--- a/signup/signup.html
+++ b/signup/signup.html
@@ -5,8 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Signup</title>
-  <base href="/Parking_Pals/">
-  <link rel="stylesheet" href="signup/signup.css">
+  <link rel="stylesheet" href="/Parking_Pals/signup/signup.css">
   <script type="module">
     import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/+esm';
 
@@ -17,7 +16,7 @@
     // Make the client available to other scripts
     window.supabase = createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
   </script>
-  <script defer src="signup/signup.js"></script>
+  <script defer src="/Parking_Pals/signup/signup.js"></script>
 </head>
 
 <body>
