Fixing pathing for all files

--- a/user/checking/checkin/checkin.html
+++ b/user/checking/checkin/checkin.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Check in</title>
-  <link rel="stylesheet" href="./checkin.css">
-  <script defer src="./checkin.js"></script>
+  <link rel="stylesheet" href="/Parking_Pals/user/checking/checkin/checkin.css">
+  <script defer src="/Parking_Pals/user/checking/checkin/checkin.js"></script>
 </head>
 
 <body>
