--- a/user/checking/checkout/checkout.html
+++ b/user/checking/checkout/checkout.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Checkout</title>
-  <link rel="stylesheet" href="./checkout.css">
-  <script defer src="./checkout.js"></script>
+  <link rel="stylesheet" href="/Parking_Pals/user/checking/checkout/checkout.css">
+  <script defer src="/Parking_Pals/user/checking/checkout/checkout.js"></script>
 </head>
 
 <body>
