--- a/login/login.html
+++ b/login/login.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login</title>
   
-  <link rel="stylesheet" href="./login.css">
-  <script defer src="./login.js"></script>
+  <link rel="stylesheet" href="/Parking_Pals/login/login.css">
+  <script defer src="/Parking_Pals/login/login.js"></script>
 </head>
 
 <body>
