--- a/user/dashboard/dashboard.html
+++ b/user/dashboard/dashboard.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Logout</title>
-  <link rel="stylesheet" href="./dashboard2.css">
-  <script defer src="./dashboard.js"></script>
+  <link rel="stylesheet" href="/Parking_Pals/user/dashboard/dashboard2.css">
+  <script defer src="/Parking_Pals/user/dashboard/dashboard.js"></script>
 </head>
 
 <body>
